--- a/CSS/index-carousel.css
+++ b/CSS/index-carousel.css
@@ -38,13 +38,16 @@
   padding: 0;
   margin: 5px;
   list-style: none;
-  transition: transform 250ms ease-in;
+  transition: transform 250ms ease-in-out;
 }
 
 .slide-name {
   background: transparent;
   position: absolute;
   width: 100%;
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+  transition-delay: 250ms;
 }
 
 /* Carousel Track Unit */
@@ -61,7 +64,7 @@
   list-style: none;
   position: relative;
   height: 100%;
-  transition: transform 250ms ease-in;
+  transition: transform 250ms ease-in-out;
 }
 
 .carousel-slide {
@@ -69,12 +72,20 @@
   top: 0;
   bottom: 0;
   width: 100%;
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+  transition-delay: 250ms;
+}
+
+.current-slide {
+  opacity: 1;
+  transition-delay: 0ms;
 }
 
 .carousel-image {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: contain;
 }
 
 /* Carousel Buttons */
@@ -122,4 +133,28 @@
 
 .is-hidden {
   display: none;
+}
+
+@media screen and (max-width: 650px) {
+
+  /* Carousel Buttons */
+  .carousel-button {
+    position: absolute;
+    top: 115%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    font-size: 5em;
+  }
+
+  #carousel-left {
+    left: 50%;
+    transform: translateX(-150%);
+  }
+
+  #carousel-right {
+    right: 50%;
+    transform: translateX(150%);
+  }
 }
