--- a/CSS/project-carousel.css
+++ b/CSS/project-carousel.css
@@ -25,6 +25,9 @@
 .slide-name {
   position: absolute;
   width: 100%;
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+  transition-delay: 250ms;
 }
 
 /* Carousel Track Unit */
@@ -48,13 +51,15 @@
   width: 100%;
   top: 50%;
   transform: translateY(-50%);
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+  transition-delay: 250ms;
 }
 
-/* .current-slide .carousel-image {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-} */
+.current-slide {
+  opacity: 1;
+  transition-delay: 0ms;
+}
 
 .carousel-image {
   object-fit: contain;
@@ -96,6 +101,7 @@
 }
 
 @media screen and (max-width: 900px) {
+
   /* Carousel Unit */
   #projects-carousel {
     padding: 0;
