--- a/CSS/index.css
+++ b/CSS/index.css
@@ -217,6 +217,7 @@ h3 {
   transform: translateY(calc(-50vh));
   transition: transform 500ms cubic-bezier(0.5, 0, 0.5, 1);
 }
+
 .projects-slide-open #projects-slider-toggle {
   padding-top: 0.5em;
   padding-bottom: 2em;
@@ -228,7 +229,7 @@ h3 {
   transform: translateY(0%);
 }
 
-.projects-slide-open #popout-unit {
+.projects-slide-open .popout-unit {
   overflow-y: initial;
   transform: translateY(0%);
 }
@@ -255,22 +256,18 @@ h3 {
   border: solid 2px var(--clr-accent);
 }
 
-.projects-slide-open
-  #projects-slider-toggle:focus-visible
-  #slide-out-arrow::before {
+.projects-slide-open #projects-slider-toggle:focus-visible #slide-out-arrow::before {
   background-color: var(--clr-accent);
   transform: translate(calc(-1em), 45px) rotate(15deg);
 }
 
-.projects-slide-open
-  #projects-slider-toggle:focus-visible
-  #slide-out-arrow::after {
+.projects-slide-open #projects-slider-toggle:focus-visible #slide-out-arrow::after {
   background-color: var(--clr-accent);
   transform: translate(calc(-100% + 1em), 45px) rotate(-15deg);
 }
 
 /* Popout Unit */
-#popout-unit {
+.popout-unit {
   /* border: solid 5px blue; */
   width: 100%;
   background: transparent;
@@ -391,11 +388,13 @@ h3 {
 }
 
 @media screen and (max-height: 860px) {
+
   /* Button Click Animation */
   .projects-slide-open #toggle-btn-container {
     transform: translateY(calc(-100vh + 100%));
     transition: transform 500ms cubic-bezier(0.5, 0, 0.5, 1);
   }
+
   .projects-slide-open #projects-slider-toggle {
     padding-top: 0.5em;
     padding-bottom: 2em;
@@ -407,15 +406,11 @@ h3 {
     transform: translateY(-100%);
   }
 
-  .projects-slide-open #popout-unit {
+  .projects-slide-open .popout-unit {
     overflow-y: initial;
     height: 90vh;
     transform: translateY(0%);
   }
 
-  .projects-slide-open #projects-carousel {
-    height: 80vh;
-    width: calc((1600 / 900 * 80vh));
-    transition: height 1000ms linear, width 1000ms linear;
-  }
+
 }
