--- a/CSS/project-carousel.css
+++ b/CSS/project-carousel.css
@@ -1,20 +1,21 @@
 /* Carousel Unit */
-#projects-carousel {
+.projects-carousel {
   padding: 0;
   position: relative;
+  top: 0;
+  left: 0;
   margin-bottom: 100px;
   height: calc(45vw * 900 / 1600);
   width: 100%;
+  transition: transform 500ms ease-in-out, width 500ms ease-in-out, height 500ms ease-in-out, top 500ms ease-in-out, left 500ms ease-in-out;
 }
 
-#names-track-container {
+.names-track-container {
   background-color: var(--clr-bg);
   overflow: hidden;
 }
 
-/* Save Point */
-
-#names-track {
+.names-track {
   height: var(--fs-h3);
   padding: 0;
   margin: 5px;
@@ -31,41 +32,39 @@
 }
 
 /* Carousel Track Unit */
-#carousel-track-container {
+.carousel-track-container {
   border: solid black 5px;
   height: calc(100% - var(--fs-h3) - 10px);
   position: relative;
   overflow: hidden;
 }
 
-#carousel-track {
+.carousel-track {
+  padding: 0;
+  margin: 0;
   list-style: none;
-  height: 100%;
   position: relative;
+  height: 100%;
   transition: transform 250ms ease-in;
 }
 
 .carousel-slide {
   position: absolute;
-  margin: auto;
+  top: 0;
+  bottom: 0;
   width: 100%;
-  top: 50%;
-  transform: translateY(-50%);
   opacity: 0;
   transition: opacity 250ms ease-in-out;
-  transition-delay: 250ms;
 }
 
 .current-slide {
   opacity: 1;
-  transition-delay: 0ms;
 }
 
 .carousel-image {
+  width: 100%;
+  height: 100%;
   object-fit: contain;
-  margin: auto;
-  max-width: 100%;
-  max-height: 100%;
 }
 
 /* Carousel Buttons */
@@ -74,7 +73,6 @@
   font-size: 2em;
   background: transparent;
   border: 0;
-  border-radius: 35px;
   cursor: pointer;
 }
 
@@ -100,15 +98,67 @@
   background-color: rgba(0, 0, 0, 0.75);
 }
 
+.expand-carousel {
+  cursor: pointer;
+  position: absolute;
+  inset: 0;
+  border: none;
+  background: transparent;
+  z-index: 10;
+}
+
+.carousel-background {
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.85);
+  transition: width 500ms ease-in-out, height 500ms ease-in-out;
+}
+
+.carousel-background-active {
+  width: 150vw;
+  height: 150vh;
+}
+
+.big {
+  position: fixed;
+  width: 80vw;
+  height: calc(900/1600 * 80vw);
+  max-width: 100vw;
+  max-height: calc(900/1600 * 100vw);
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+}
+
+.big>.carousel-button {
+  font-size: 5em;
+}
+
 @media screen and (max-width: 900px) {
 
   /* Carousel Unit */
-  #projects-carousel {
+  .projects-carousel {
     padding: 0;
     position: relative;
     border: solid black 5px;
     margin-bottom: 100px;
     height: calc(90vw * 900 / 1600);
     width: 100%;
+  }
+
+  .big {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90vw;
+    height: calc(900/1600 * 90vw);
+    z-index: 2;
   }
 }
