--- a/css/project-carousel.css
+++ b/css/project-carousel.css
@@ -101,10 +101,20 @@
 .expand-carousel {
   cursor: pointer;
   position: absolute;
-  inset: 0;
+  top: 0%;
+  right: 0%;
+  height: 10%;
+  width: 10%;
   border: none;
-  background: transparent;
+  background: rgba(0, 0, 0, 0.85);
   z-index: 10;
+  letter-spacing: 0px;
+  transition: letter-spacing 100ms ease-in-out;
+}
+
+.expand-carousel:hover,
+.expand-carousel:focus-visible {
+  letter-spacing: 3px;
 }
 
 .carousel-background {
